Events cancellation logic: - Shared library added between site and bot - Refactored scheduled tasks infrastructure - Added a scheduled check handling the events cancellation after runing the post webhook close #2

--- a/src/Bot/Ivao.It.DiscordBot.csproj
+++ b/src/Bot/Ivao.It.DiscordBot.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Data\Ivao.It.DiscordBot.Data.csproj" />
+    <ProjectReference Include="..\Shared\Ivao.It.Discord.Shared.csproj" />
   </ItemGroup>
 
 </Project>
