--- a/src/Login/Ivao.It.DiscordLogin.csproj
+++ b/src/Login/Ivao.It.DiscordLogin.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Data\Ivao.It.DiscordBot.Data.csproj" />
+    <ProjectReference Include="..\Shared\Ivao.It.Discord.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
