--- a/src/Bot/Ivao.It.DiscordBot.csproj
+++ b/src/Bot/Ivao.It.DiscordBot.csproj
@@ -9,11 +9,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="4.2.0-nightly-01056" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.2.0-nightly-01056" />
+    <PackageReference Include="DSharpPlus" Version="4.2.0-nightly-01059" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.2.0-nightly-01059" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0" />
+    <PackageReference Include="Quartz" Version="3.3.3" />
+    <PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.3.3" />
   </ItemGroup>
 
   <ItemGroup>
