--- a/src/Bot/Ivao.It.DiscordBot.csproj
+++ b/src/Bot/Ivao.It.DiscordBot.csproj
@@ -9,10 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="4.2.0-nightly-01113" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.2.0-nightly-01113" />
-    <PackageReference Include="DSharpPlus.Interactivity" Version="4.2.0-nightly-01113" />
-    <PackageReference Include="DSharpPlus.SlashCommands" Version="4.2.0-nightly-01113" />
+    <PackageReference Include="DSharpPlus" Version="4.2.0" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.2.0" />
+    <PackageReference Include="DSharpPlus.Interactivity" Version="4.2.0" />
+    <PackageReference Include="DSharpPlus.SlashCommands" Version="4.2.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
