Text message auto prune, exluding pinned messages - close #18

--- a/src/Service/appsettings.Development.json
+++ b/src/Service/appsettings.Development.json
@@ -17,7 +17,11 @@
     "VerifiedUsersRoleId": 771735683966304307,
     "AnnouncementsChannelId": 923870356270358528,
     "EventsStaffChannelId": 969689975643844630,
-    "DiscordAccessWizardHomepage": "http://localhost:5155/"
+    "DiscordAccessWizardHomepage": "http://localhost:5155/",
+    "CannelsToBeCleanedUp": [
+      923870356270358528, //trainings
+      1071046275014860841 //fpls
+    ]
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.File" ],
