--- a/src/Service/appsettings.Production.json
+++ b/src/Service/appsettings.Production.json
@@ -7,13 +7,17 @@
     }
   },
   "ConnectionStrings": {
+    "DiscordBot": "Server=localhost;User=ivaomain;Password=12Lpdieq34;Database=discord"
   },
   "DiscordConfig": {
+    "DiscordToken": "NzcxNjgxODYzOTUyODkxOTQ0.X5vqvQ.BN1SgN4vt9bUmPqUPpDjPICOAv4",
     "WelcomeChannelId": 446717128179974144,
     "ActivationChannelId": 921465037367951380,
     "BotControlChannelId": 922593619356045382,
     "BotUserId": 771681863952891944,
     "VerifiedUsersRoleId": 922589100186407003,
+    "AnnouncementsChannelId": 927149041366761483,
+    "EventsStaffChannelId": 970762631298302093,
     "DiscordAccessWizardHomepage": "http://discord.ivao.it/"
   },
   "Serilog": {
