--- a/src/Service/appsettings.Production.json
+++ b/src/Service/appsettings.Production.json
@@ -10,7 +10,7 @@
     "DiscordBot": "Server=localhost;User=ivaomain;Password=12Lpdieq34;Database=discord"
   },
   "DiscordConfig": {
-    "DiscordToken": "NzcxNjgxODYzOTUyODkxOTQ0.X5vqvQ.BN1SgN4vt9bUmPqUPpDjPICOAv4",
+    "DiscordToken": "",
     "WelcomeChannelId": 446717128179974144,
     "ActivationChannelId": 921465037367951380,
     "BotControlChannelId": 922593619356045382,
