--- a/src/Service/appsettings.Production.json
+++ b/src/Service/appsettings.Production.json
@@ -18,7 +18,11 @@
     "VerifiedUsersRoleId": 922589100186407003,
     "AnnouncementsChannelId": 927149041366761483,
     "EventsStaffChannelId": 970762631298302093,
-    "DiscordAccessWizardHomepage": "http://discord.ivao.it/"
+    "DiscordAccessWizardHomepage": "http://discord.ivao.it/",
+    "CannelsToBeCleanedUp": [
+      927149041366761483, //trainings
+      1071497180117995520 //fpls
+    ]
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.File" ],
